--- a/aboutus.html
+++ b/aboutus.html
@@ -51,6 +51,21 @@ layout: default
             <a href="Modulation.html" class="">
                 <h3>Modulation Property</h3>
             </a>
+            <a href="FFTTHEORY.html" class="">
+                <h3>FFT Algorithm</h3>
+            </a>
+            <a href="DITFFT.html" class="">
+                <h3>DFT using DITFFT</h3>
+            </a>
+            <a href="IDFTDITFFT.html" class="">
+                <h3>IDFT using DITFFT</h3>
+            </a>
+            <a href="DIFFFT.html" class="">
+                <h3>DFT using DIFFFT</h3>
+            </a>
+            <a href="IDFTDIFFFT.html" class="">
+                <h3>IDFT using DIFFFT</h3>
+            </a>
             <a href="differences(FIR&IIR).html" class="">
                 <h3>IIR and FIR differences</h3>
             </a>
@@ -132,7 +147,7 @@ layout: default
                           <h4 class="card-title">Pathipati Yashwanth Sai</h4>
                           <p class="card-text">3rd year, ECE, B.Tech at Sri Venkateswara University, Tirupati</p>
                           <p class="card-text"><h5>Work:</h5>
-                            UI Design, Integration of total work and chapter-I topics of DSP
+                            UI Design, Integration of total work, mobile responsiveness of the project and chapter-I topics of DSP
                           </p>
                         </div>
                       </div>
@@ -147,8 +162,8 @@ layout: default
                           <h4 class="card-title">Boddupalli Bhanu Prakash</h4>
                           <p class="card-text">3rd year, ECE, B.Tech at Sri Venkateswara University, Tirupati</p>
                           <p class="card-text"><h5>Work:</h5>
-                            Chapter-II topics of DSP
-                          </p>
+                            Chapter-II topics of DSP and assisted in the mobile responsiveness
+                          </p><br>
                         </div>
                       </div>
                     </div>
@@ -162,7 +177,7 @@ layout: default
                           <h4 class="card-title">Renati Venkata Sandeep</h4>
                           <p class="card-text">3rd year, ECE, B.Tech at Sri Venkateswara University, Tirupati</p>
                           <p class="card-text"><h5>Work:</h5>
-                            Chapter-III of DSP
+                            Chapter-III of DSP and worked on Fast Fourier Transform algorithms
                           </p>
                         </div>
                       </div>
@@ -174,11 +189,11 @@ layout: default
                     <div class="row g-0">
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h4 class="card-title">Yallapu Rohini Datta</h4>
+                          <h4 class="card-title">Yallapu Rohini Datta</h4><br>
                           <p class="card-text">3rd year, ECE, B.Tech at Sri Venkateswara University, Tirupati</p>
                           <p class="card-text"><h5>Work:</h5>
-                            Chapter IV of DSP
-                          </p> 
+                            Chapter IV of DSP and worked on Fast Fourier Transform algorithms
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -195,16 +210,16 @@ layout: default
             <br>
             <div class="row" style="margin: 0 auto;">
                 <div class="mb-3">
-                    <label for="fullName" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="fullName">
+                    <label for="fullName" class="form-label">Name<sup class="text-danger">*</sup></label>
+                    <input type="text" class="form-control" id="fullName" required>
                 </div>
                 <div class="mb-3">
-                    <label for="email_id" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="email_id">
+                    <label for="email_id" class="form-label">Email address<sup class="text-danger">*</sup></label>
+                    <input type="email" class="form-control" id="email_id" required>
                 </div>
                 <div class="mb-3">
-                    <label for="message" class="form-label">Message</label>
-                    <textarea class="form-control" id="message" rows="3"></textarea>
+                    <label for="message" class="form-label">Message<sup class="text-danger">*</sup></label>
+                    <textarea class="form-control" id="message" rows="3" required></textarea>
                 </div><br>
                 <button type="submit" class="btn btn-lg btn-warning" style="width: 40%; margin: 0 auto;" onclick="sendMail()" value="Send">Send</button>
             </div><br><br>
