--- a/differences(FIR&IIR).html
+++ b/differences(FIR&IIR).html
@@ -51,6 +51,21 @@ layout: default
             <a href="Modulation.html" class="">
                 <h3>Modulation Property</h3>
             </a>
+            <a href="FFTTHEORY.html" class="">
+                <h3>FFT Algorithm</h3>
+            </a>
+            <a href="DITFFT.html" class="">
+                <h3>DFT using DITFFT</h3>
+            </a>
+            <a href="IDFTDITFFT.html" class="">
+                <h3>IDFT using DITFFT</h3>
+            </a>
+            <a href="DIFFFT.html" class="">
+                <h3>DFT using DIFFFT</h3>
+            </a>
+            <a href="IDFTDIFFFT.html" class="">
+                <h3>IDFT using DIFFFT</h3>
+            </a>
             <a href="differences(FIR&IIR).html" class="active">
                 <h3>IIR and FIR differences</h3>
             </a>
